fix pagination on smaller sizes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,31 +57,55 @@ form > button {
   justify-content: center;
 }
 
-.pagination > .pages > a {
-  position: relative;
-  top: -28px;
-  padding: 8px 8px;
-  margin: 10px 10px;
-  color: white;
-  border-radius: 50%;
-  background-color: black;
-  line-height: 24px;
-  width: 24px;
-  display: inline-block;
-}
-
 .pages {
   height: 3px;
   background-color: black;
 }
 
-.pages > a:hover {
+.pages > * {
+  line-height: 24px;
+	display: inline-block;
+}
+
+.page {
+	color: white;
+	background-color: black;
+	border-radius: 50%;
+	width: 40px;
+	position: relative;
+	top: -18px;
+	padding: 8px 8px;
+  margin: 0 8px;
+}
+
+.page:hover {
   background-color: #005abf;
+}
+
+.page-arrow {
+	color: black;
+	font-size: 36px;
+	position: relative;
+	top: -13px;
+	margin: 0 -6px;
+}
+
+a.page-arrow:hover {
+  color: #005abf;
+}
+
+.skipped-pages {
+	color: gray;
+	font-size: 36px;
+	position: relative;
+	top: -22px;
+	margin: 0 5px;
 }
 
 #active-page {
   background-color: #0062d0;
 }
+
 
 .disabled {
 	display: none;
@@ -219,6 +243,10 @@ form > button {
 }
 
 @media screen and (max-width: 767px){
+
+	.non-active-page, .skipped-pages {
+		display: none;
+	}
 
 	.animenu__btn{
 		display:inline-block;
